# ChangeLog for games-kids/cubetest
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-kids/cubetest/ChangeLog,v 1.14 2009/09/21 01:26:08 mr_bones_ Exp $

  21 Sep 2009; Michael Sterrett <mr_bones_@gentoo.org>
  files/cubetest-0.9.4-build.patch:
  Re-roll patch and try to fix bug #273786

  23 Jun 2009; Michael Sterrett <mr_bones_@gentoo.org>
  cubetest-0.9.4.ebuild:
  EAPI=2

  07 Oct 2008; Michael Sterrett <mr_bones_@gentoo.org>
  cubetest-0.9.4.ebuild:
  add dev-util/pkgconfig for bug #239716

  30 Jun 2008; Tristan Heaven <nyhm@gentoo.org> cubetest-0.9.4.ebuild:
  Add split qt-4 dependencies, bug #217170

  10 Jun 2008; Michael Sterrett <mr_bones_@gentoo.org>
  cubetest-0.9.4.ebuild:
  use slotted deps for qt for bug #217170

  05 Feb 2007; Michael Sterrett <mr_bones_@gentoo.org>
  cubetest-0.9.4.ebuild:
  require >=x11-libs/qt-4.2.2 to have qt3support use flag set (bug #165458)

  09 Oct 2006; Tristan Heaven <nyhm@gentoo.org> cubetest-0.9.4.ebuild:
  Add prepgamesdirs to src_install

  16 Aug 2006; Caleb Tennis <caleb@gentoo.org> cubetest-0.9.4.ebuild:
  Change qt_min_version to qt4_min_version

*cubetest-0.9.4 (21 Jun 2006)

  21 Jun 2006; Mike Frysinger <vapier@gentoo.org>
  +files/cubetest-0.9.4-build.patch, +cubetest-0.9.4.ebuild:
  Version bump #115691 by maquiz.

  10 Jun 2005; David Holm <dholm@gentoo.org> cubetest-0.9.3.ebuild:
  Added to ~ppc.

*cubetest-0.9.3 (15 May 2005)

  15 May 2005; Mike Frysinger <vapier@gentoo.org> +cubetest-0.9.3.ebuild:
  Version bump to fix #92708.

  04 Jul 2004; Carsten Lohrke <carlo@gentoo.org> cubetest-0.9.0.ebuild:
  QA: need-kde after R/DEPEND

*cubetest-0.9.0 (09 Feb 2004)

  09 Feb 2004; Michael Sterrett <mr_bones_@gentoo.org> cubetest-0.9.0.ebuild,
  metadata.xml:
  initial commit (bug #39328)
